--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phaser3-typescript",
+  "name": "phaser3-mvvm-typescript",
   "author": "RollinSafary <rollinsafary@hotmail.com>",
   "version": "1.0.0",
   "private": true,
